--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "cube-ui": "~1.12.15",
     "vue": "^2.6.11",
@@ -30,5 +31,18 @@
       "transform": "cube-ui/src/modules/${member}",
       "kebabCase": true
     }
-  }
+  },
+  "main": "async.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lymilan10/vue-jingdong.git"
+  },
+  "keywords": [],
+  "author": "liuya",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lymilan10/vue-jingdong/issues"
+  },
+  "homepage": "https://github.com/lymilan10/vue-jingdong#readme",
+  "description": "jingdong"
 }
